Doordeck flutter SDK

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,7 +1,7 @@
 name: doordeck_example
 description: Demonstrates how to use the doordeck plugin.
 publish_to: 'none'
-
+version: 1.0.0+1.0.0
 environment:
   sdk: ">=2.1.0 <3.0.0"
 
